tests/ui/arg_missmatch.stderr
error: tuple pattern missmatch: expected length 2, got 1
 --> tests/ui/arg_missmatch.rs:7:26
  |
7 |             #[expand(for (A, B) in [(1, 2), (3)])]
  |                          ^^^^^^
